force-app/main/default/objects/Custom_Notification__mdt/Custom_Notification__mdt.object-meta.xml
<CustomObject>
    <description>Used for storing notification metadata for informing NPSP users</description>
    <label>Custom Notification</label>
    <pluralLabel>Custom Notifications</pluralLabel>
</CustomObject>