force-app/main/default/objects/Custom_Notification__mdt/fields/Audience_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Audience_Implementation__c</fullName>
    <label>Audience Implementation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>