force-app/main/default/objects/Custom_Notification__mdt/fields/Audience_Implementation_Class__c.field-meta.xml
<CustomField>
    <fullName>Audience_Implementation_Class__c</fullName>
    <label>Audience Implementation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>