force-app/main/default/objects/Custom_Notification__mdt/fields/Notification_Channel__c.field-meta.xml
<CustomField>
    <fullName>Notification_Channel__c</fullName>
    <label>Notification Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>