force-app/main/default/objects/Custom_Notification__mdt/fields/Notification_Content_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Notification_Content_Implementation__c</fullName>
    <label>Notification Content Implementation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>