force-app/main/default/objects/Custom_Notification__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of notification</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>